--- a/css/styles.css
+++ b/css/styles.css
@@ -210,14 +210,23 @@ h3 {
     height: 100%; 
     border-radius: 0.5rem;
     box-shadow: 2px 2px 21.6px 3px rgba(93, 93, 93, 0.12);
-
+    min-height: 300px;
 }
 
 .about {
     grid-area: about;
+    justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     /* grid-column-start: 1;
     grid-column-end: 9; */
-  
+}
+
+.bonus-text {
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
 }
 
 .experience {
@@ -398,7 +407,7 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 2rem;
+    gap: 3rem;
     
 
 }
@@ -583,7 +592,7 @@ h3 {
   .nav {
     flex-direction: column;
     gap: 1rem;
-    
+
   } 
 
   .featured-project {
