--- a/css/typography.css
+++ b/css/typography.css
@@ -150,6 +150,10 @@ h3 {
         font-size: 20px;
         line-height: 1.7;
     }
+
+    h2 {
+        font-size: 38px;
+    }
 }
 
 /* Secondary Text */
