Update home.html and index.html content; correct spelling in home.html, enhance index.html with additional details for "Basic Frontend" and add "Figma" section. Modify resume link in nav.js to open PDF in a new tab. Update CV content in PDF with translations and formatting improvements.

--- a/css/main.css
+++ b/css/main.css
@@ -682,3 +682,9 @@ body {
     color: var(--color-text-primary);
     margin-bottom: 0.5rem;
 }
+
+.nav .button.text-button {
+    font-family: 'Nokora', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+}
