--- a/css/main.css
+++ b/css/main.css
@@ -688,3 +688,16 @@ body {
     font-weight: 400;
     font-size: 16px;
 }
+
+@media (max-width: 768px) {
+    .featured-project.disabled .coming-soon-overlay {
+        opacity: 1;
+    }
+}
+
+.featured-project-content img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
