--- a/css/main.css
+++ b/css/main.css
@@ -706,6 +706,7 @@ body {
         flex-direction: column;
         gap: 0.5rem;
         padding: 0.5rem;
+        margin-top: 2rem;
         
     }
 
