--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,10 @@ h3 {
     padding-right: 3rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 /* Logo Sizing */
